# vitulus_nmcli

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: nmcli.launch
nodes/: network_manager
